--- a/portfolio.html
+++ b/portfolio.html
@@ -88,184 +88,184 @@
         <div class="container">
           <h1 class="visually-hidden">Селектори фільтру</h1>
 
-          <ul class="sort-buttons">
+          <ul class="filter">
             <li>
-              <button class="button-filter active-btn" type="button">
+              <button class="filter__button filter__button--active" type="button">
                 Усі
               </button>
             </li>
             <li>
-              <button class="button-filter" type="button">Веб сайти</button>
+              <button class="filter__button" type="button">Веб сайти</button>
             </li>
             <li>
-              <button class="button-filter" type="button">Додатки</button>
+              <button class="filter__button" type="button">Додатки</button>
             </li>
-            <li><button class="button-filter" type="button">Дизайн</button></li>
+            <li><button class="filter__button" type="button">Дизайн</button></li>
             <li>
-              <button class="button-filter" type="button">Маркетинг</button>
+              <button class="filter__button" type="button">Маркетинг</button>
             </li>
           </ul>
           <!-- list of projects -->
-          <ul class="projects-list">
-            <li class="project-item" tabindex="0">
-              <div class="img-project">
+          <ul class="projects">
+            <li class="projects__item" tabindex="0">
+              <div class="projects__img">
                 <img
                   src="./images/projects-pic/technokryak.jpg"
                   alt="ноутбук з відкритою сторінкою сайту"
                   width="370"
                 />
-                <p class="overlay-project-description">
+                <p class="projects__overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.
                 </p>
               </div>
-              <div class="card-description">
-                <h3 class="projects-list-title">Технокряк</h3>
-                <p class="projects-list-desription">Веб сайт</p>
+              <div class="projects__thumb">
+                <h3 class="projects__title">Технокряк</h3>
+                <p class="projects__desription">Веб сайт</p>
               </div>
             </li>
-            <li class="project-item" tabindex="0">
-              <div class="img-project">
+            <li class="projects__item" tabindex="0">
+              <div class="projects__img">
                 <img
                   src="./images/projects-pic/poster-neworlean.jpg"
                   alt="постер з гравцями у баскетбол"
                   width="370"
                 />
-                <p class="overlay-project-description">
+                <p class="projects__overlay">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quaerat impedit minus assumenda eum itaque dignissimos?
                 </p>
               </div>
-              <div class="card-description">
-                <h3 class="projects-list-title">
+              <div class="projects__thumb">
+                <h3 class="projects__title">
                   Постер New Orlean vs Golden Star
                 </h3>
-                <p class="projects-list-desription">Дизайн</p>
+                <p class="projects__desription">Дизайн</p>
               </div>
             </li>
-            <li class="project-item" tabindex="0">
-              <div class="img-project">
+            <li class="projects__item" tabindex="0">
+              <div class="projects__img">
                 <img
                   src="./images/projects-pic/seafood.jpg"
                   alt="логотип ресторану"
                   width="370"
                 />
-                <p class="overlay-project-description">
+                <p class="projects__overlay">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quaerat impedit minus assumenda eum itaque dignissimos?
                 </p>
               </div>
 
-              <div class="card-description">
-                <h3 class="projects-list-title">Ресторан Seafood</h3>
-                <p class="projects-list-desription">Додаток</p>
+              <div class="projects__thumb">
+                <h3 class="projects__title">Ресторан Seafood</h3>
+                <p class="projects__desription">Додаток</p>
               </div>
             </li>
-            <li class="project-item" tabindex="0">
-              <div class="img-project">
+            <li class="projects__item" tabindex="0">
+              <div class="projects__img">
                 <img
                   src="./images/projects-pic/prime.jpg"
                   alt="навушники"
                   width="370"
                 />
-                <p class="overlay-project-description">
+                <p class="projects__overlay">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quaerat impedit minus assumenda eum itaque dignissimos?
                 </p>
               </div>
-              <div class="card-description">
-                <h3 class="projects-list-title">Проект Prime</h3>
-                <p class="projects-list-desription">Маркетинг</p>
+              <div class="projects__thumb">
+                <h3 class="projects__title">Проект Prime</h3>
+                <p class="projects__desription">Маркетинг</p>
               </div>
             </li>
-            <li class="project-item" tabindex="0">
-              <div class="img-project">
+            <li class="projects__item" tabindex="0">
+              <div class="projects__img">
                 <img
                   src="./images/projects-pic/boxes.jpg"
                   alt="дві різні поштові коробки"
                   width="370"
                 />
-                <p class="overlay-project-description">
+                <p class="projects__overlay">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quaerat impedit minus assumenda eum itaque dignissimos?
                 </p>
               </div>
-              <div class="card-description">
-                <h3 class="projects-list-title">Проект Boxes</h3>
-                <p class="projects-list-desription">Додаток</p>
+              <div class="projects__thumb">
+                <h3 class="projects__title">Проект Boxes</h3>
+                <p class="projects__desription">Додаток</p>
               </div>
             </li>
-            <li class="project-item" tabindex="0">
-              <div class="img-project">
+            <li class="projects__item" tabindex="0">
+              <div class="projects__img">
                 <img
                   src="./images/projects-pic/inspiration.jpg"
                   alt="монітор з відкритою сторінкою сайту"
                   width="370"
                 />
-                <p class="overlay-project-description">
+                <p class="projects__overlay">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quaerat impedit minus assumenda eum itaque dignissimos?
                 </p>
               </div>
 
-              <div class="card-description">
-                <h3 class="projects-list-title">inspirations has no Borders</h3>
-                <p class="projects-list-desription">Веб сайт</p>
+              <div class="projects__thumb">
+                <h3 class="projects__title">inspirations has no Borders</h3>
+                <p class="projects__desription">Веб сайт</p>
               </div>
             </li>
-            <li class="project-item" tabindex="0">
-              <div class="img-project">
+            <li class="projects__item" tabindex="0">
+              <div class="projects__img">
                 <img
                   src="./images/projects-pic/limited-edition.jpg"
                   alt="журнал"
                   width="370"
                 />
-                <p class="overlay-project-description">
+                <p class="projects__overlay">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quaerat impedit minus assumenda eum itaque dignissimos?
                 </p>
               </div>
 
-              <div class="card-description">
-                <h3 class="projects-list-title">Видання Limited edition</h3>
-                <p class="projects-list-desription">Дизайн</p>
+              <div class="projects__thumb">
+                <h3 class="projects__title">Видання Limited edition</h3>
+                <p class="projects__desription">Дизайн</p>
               </div>
             </li>
-            <li class="project-item" tabindex="0">
-              <div class="img-project">
+            <li class="projects__item" tabindex="0">
+              <div class="projects__img">
                 <img
                   src="./images/projects-pic/LAB.jpg"
                   alt="Бірка"
                   width="370"
                 />
-                <p class="overlay-project-description">
+                <p class="projects__overlay">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quaerat impedit minus assumenda eum itaque dignissimos?
                 </p>
               </div>
 
-              <div class="card-description">
-                <h3 class="projects-list-title">Проект LAB</h3>
-                <p class="projects-list-desription">Маркетинг</p>
+              <div class="projects__thumb">
+                <h3 class="projects__title">Проект LAB</h3>
+                <p class="projects__desription">Маркетинг</p>
               </div>
             </li>
-            <li class="project-item" tabindex="0">
-              <div class="img-project">
+            <li class="projects__item" tabindex="0">
+              <div class="projects__img">
                 <img
                   src="./images/projects-pic/growing-business.jpg"
                   alt="робота за ноутбуком"
                   width="370"
                 />
-                <p class="overlay-project-description">
+                <p class="projects__overlay">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quaerat impedit minus assumenda eum itaque dignissimos?
                 </p>
               </div>
 
-              <div class="card-description">
-                <h3 class="projects-list-title">Growing Business</h3>
-                <p class="projects-list-desription">Додаток</p>
+              <div class="projects__thumb">
+                <h3 class="projects__title">Growing Business</h3>
+                <p class="projects__desription">Додаток</p>
               </div>
             </li>
           </ul>
@@ -278,38 +278,38 @@
       <div class="page-footer__container">
         <div class="page-footer__box">
           <!-- логотип футера-->
-          <div class="logo-wrapper">
+          <div class="page-footer__logo-wrapper">
             <a class="logo logo--web" href="./index.html"
               >Web<span class="logo logo--footer">Studio</span></a
             >
           </div>
 
           <!-- зворотня адреса -->
-          <address class="address__list">
-            <ul>
+          <address class="address">
+            <ul class="address__list">
               <li class="address__item">
                 <a
-                  class="page-footer__map-link"
+                  class="address--map-link"
                   href="https://www.google.com/maps/d/embed?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ehbc=2E312F"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
               <li class="address__item">
-                <a class="page-footer__contacts" href="mailto:info@devstudio.com"
+                <a class="address__contacts" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="address__item">
-                <a class="page-footer__contacts" href="tel:+380961111111"
+                <a class="address__contacts" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="contact-us__block">
-          <div class="join-social__block-wrapper">
-          <h2 class="subscribe__title">приєднуйтесь</h2>
+        <div class="page-footer__contact-us">
+          <div class="page-footer__join-social">
+          <h2 class="page-footer__title">приєднуйтесь</h2>
           <ul class="social-links">
             <li>
               <a class="button-social button-footer" tabindex="0">
@@ -342,7 +342,7 @@
           </ul>
         </div>
         <div class="subscribe">
-          <p class="subscribe__title">Підпишіться на розсилку</p>
+          <p class="page-footer__title">Підпишіться на розсилку</p>
           <form class="subscribe__form">
             <label class="visually-hidden" for="email">Підпишіться на розсилку</label>
               <input 
