--- a/index.html
+++ b/index.html
@@ -73,9 +73,14 @@
           </svg>
         </button>
       </div>
-      <div class="mobile-menu is-open" data-menu>
+      <div class="mobile-menu" data-menu>
         <div class="container mobile-menu__container">
-          <button type="button" class="mobile-menu__close-btn" data-menu-close>
+          <button
+            type="button"
+            class="mobile-menu__close-btn"
+            data-menu-close
+            tabindex="0"
+          >
             <svg class="mobile-menu__close-icon" width="19" height="19">
               <use href="./images/icons/sprite.svg#cross"></use>
             </svg>
@@ -110,10 +115,10 @@
             </li>
           </ul>
           <ul class="mobile-menu__social accent-item">
-            <li class="mobile-social__link">Instagram</li>
-            <li class="mobile-social__link">Twitter</li>
-            <li class="mobile-social__link">Facebook</li>
-            <li class="mobile-social__link">LinkedIn</li>
+            <li class="mobile-social__link" tabindex="0">Instagram</li>
+            <li class="mobile-social__link" tabindex="0">Twitter</li>
+            <li class="mobile-social__link" tabindex="0">Facebook</li>
+            <li class="mobile-social__link" tabindex="0">LinkedIn</li>
           </ul>
         </div>
       </div>
