changes for homework

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body class="body">
     <!-- верхнє меню -->
     <header class="page-header">
-      <div class="page-header__container">
+      <div class="container page-header__container">
         <nav class="navigation">
           <a class="logo logo--web" href="./index.html"
             >Web<span class="logo logo--studio">Studio</span></a
